--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 <body class="p-4">
 <nav class="d-flex justify-content-between align-items-center mb-4">
   <div class="d-flex align-items-center">
-    <img src="assets/img/cpl_per_mhs/S1_Teknik_Perkapalan/Gasal_2024_2025/grafik.png" alt="logo" style="height:48px; width:72px; object-fit:cover; margin-right:12px;">
+    <img src="DTMLOGO.png" alt="logo" style="height:50px; width:122px; object-fit:cover; margin-right:12px;">
     <div>
       <div style="font-weight:700;">Aplikasi Monitoring dan Evaluasi Pencapaian CPL DTM FTUI</div>
       <small id="userLabel" class="text-muted"></small>
