--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 </head>
 <body class="p-4">
 <nav class="d-flex justify-content-between align-items-center mb-4">
-  <div class="d-flex align-items-center">
-    <img src="DTMLOGO.png" alt="logo" style="height:50px; width:122px; object-fit:cover; margin-right:12px;">
+  <div class="logo-box">
+    <img src="DTMLOGO.png" alt="DTM FTUI" style="height:50px; width:122px; object-fit:cover; margin-right:12px;">
     <div>
       <div style="font-weight:700;">Aplikasi Monitoring dan Evaluasi Pencapaian CPL DTM FTUI</div>
       <small id="userLabel" class="text-muted"></small>
