--- a/main.html
+++ b/main.html
@@ -3,81 +3,110 @@
 <head>
 <meta charset="UTF-8">
 <title>Aplikasi Monitoring CPL</title>
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="assets/css/style.css">
+
 <script src="assets/js/main.js" defer></script>
 </head>
-<body class="p-4">
-<nav class="d-flex justify-content-between align-items-center mb-4">
-  <div class="logo-box">
-    <img src="DTMLOGO.png" alt="DTM FTUI" style="height:50px; width:122px; object-fit:cover; margin-right:12px;">
-    <div>
-      <div style="font-weight:700;">Aplikasi Monitoring dan Evaluasi Pencapaian CPL DTM FTUI</div>
-      <small id="userLabel" class="text-muted"></small>
-    </div>
-  </div>
-  <button id="logoutBtn" class="btn btn-outline-danger">Logout</button>
-</nav>
 
-<div class="container">
-  <div class="row">
-    <div class="col-md-6">
-      <h5 class="section-title">Pencapaian CPL per Mahasiswa</h5>
-      <label>Program Studi</label>
-      <select id="prodiMhs" class="form-select mb-2">
-        <option value="">-- pilih Program Studi --</option>
-        <option value="S1_Teknik_Perkapalan">S1 Teknik Perkapalan</option>
-        <option value="S1_Teknik_Mesin">S1 Teknik Mesin</option>
-      </select>
-      <label>Semester</label>
-      <select id="semesterMhs" class="form-select mb-2">
+<body>
+
+<!-- =================== STICKY HEADER =================== -->
+<header class="app-header shadow-sm">
+    <div class="container d-flex justify-content-between align-items-center py-2">
+
+        <div class="d-flex align-items-center">
+            <!-- Logo -->
+            <div class="logo-box me-3">
+                <img src="DTMLOGO.png" alt="DTM FTUI Logo">
+            </div>
+
+            <!-- Title -->
+            <div>
+                <div class="app-title">Aplikasi Monitoring dan Evaluasi Pencapaian CPL DTM FTUI</div>
+                <small id="userLabel" class="text-muted"></small>
+            </div>
+        </div>
+
+        <!-- Logout Button -->
+        <button id="logoutBtn" class="btn btn-outline-danger">Logout</button>
+    </div>
+</header>
+
+
+<!-- =================== MAIN CONTENT =================== -->
+<div class="container" style="padding-top:120px;"> <!-- offset untuk sticky header -->
+
+    <div class="row">
+        <!-- =================== Column 1 =================== -->
+        <div class="col-md-6">
+            <h5 class="section-title">Pencapaian CPL per Mahasiswa</h5>
+
+            <label>Program Studi</label>
+            <select id="prodiMhs" class="form-select mb-2">
+                <option value="">-- pilih Program Studi --</option>
+                <option value="S1_Teknik_Perkapalan">S1 Teknik Perkapalan</option>
+                <option value="S1_Teknik_Mesin">S1 Teknik Mesin</option>
+            </select>
+
+            <label>Semester</label>
+            <select id="semesterMhs" class="form-select mb-2">
+                <option value="">-- pilih Semester --</option>
+                <option value="Gasal_2024_2025">Gasal 2024/2025</option>
+                <option value="Genap_2024_2025">Genap 2024/2025</option>
+                <option value="Gasal_2025_2026">Gasal 2025/2026</option>
+            </select>
+
+            <div class="mt-3">
+                <img id="imgMhs" src="" class="img-fluid d-none border" alt="grafik per mahasiswa">
+            </div>
+        </div>
+
+        <!-- =================== Column 2 =================== -->
+        <div class="col-md-6">
+            <h5 class="section-title">Pencapaian CPL Prodi</h5>
+
+            <label>Program Studi</label>
+            <select id="prodiProdi" class="form-select mb-2">
+                <option value="">-- pilih Program Studi --</option>
+                <option value="S1_Teknik_Perkapalan">S1 Teknik Perkapalan</option>
+                <option value="S1_Teknik_Mesin">S1 Teknik Mesin</option>
+            </select>
+
+            <label>Angkatan Masuk</label>
+            <select id="angkatanProdi" class="form-select mb-2">
+                <option value="">-- pilih Angkatan --</option>
+                <option value="2020">2020</option>
+                <option value="2021">2021</option>
+                <option value="2022">2022</option>
+                <option value="2023">2023</option>
+                <option value="2024">2024</option>
+                <option value="2025">2025</option>
+            </select>
+
+            <div class="mt-3">
+                <img id="imgProdi" src="" class="img-fluid d-none border" alt="grafik prodi">
+            </div>
+        </div>
+    </div>
+
+    <hr class="my-4">
+
+    <!-- =================== Google Form Section =================== -->
+    <h5 class="section-title">Evaluasi Perkuliahan oleh Dosen Pengampu untuk Portofolio MK</h5>
+
+    <label>Pilih Semester</label>
+    <select id="evalSemester" class="form-select w-50 mb-2">
         <option value="">-- pilih Semester --</option>
         <option value="Gasal_2024_2025">Gasal 2024/2025</option>
         <option value="Genap_2024_2025">Genap 2024/2025</option>
         <option value="Gasal_2025_2026">Gasal 2025/2026</option>
-      </select>
-      <div class="mt-3">
-        <img id="imgMhs" src="" class="img-fluid d-none border" alt="grafik per mahasiswa">
-      </div>
+    </select>
+
+    <div id="googleFormBox" class="mt-3 d-none">
+        <iframe id="googleFormFrame" width="100%" height="600" style="border:0;"></iframe>
     </div>
-
-    <div class="col-md-6">
-      <h5 class="section-title">Pencapaian CPL Prodi</h5>
-      <label>Program Studi</label>
-      <select id="prodiProdi" class="form-select mb-2">
-        <option value="">-- pilih Program Studi --</option>
-        <option value="S1_Teknik_Perkapalan">S1 Teknik Perkapalan</option>
-        <option value="S1_Teknik_Mesin">S1 Teknik Mesin</option>
-      </select>
-      <label>Angkatan Masuk</label>
-      <select id="angkatanProdi" class="form-select mb-2">
-        <option value="">-- pilih Angkatan --</option>
-        <option value="2020">2020</option>
-        <option value="2021">2021</option>
-        <option value="2022">2022</option>
-        <option value="2023">2023</option>
-        <option value="2024">2024</option>
-        <option value="2025">2025</option>
-      </select>
-      <div class="mt-3">
-        <img id="imgProdi" src="" class="img-fluid d-none border" alt="grafik prodi">
-      </div>
-    </div>
-  </div>
-
-  <hr class="my-4">
-
-  <h5 class="section-title">Evaluasi Perkuliahan oleh Dosen Pengampu untuk Portofolio MK</h5>
-  <label>Pilih Semester</label>
-  <select id="evalSemester" class="form-select w-50 mb-2">
-    <option value="">-- pilih Semester --</option>
-    <option value="Gasal_2024_2025">Gasal 2024/2025</option>
-    <option value="Genap_2024_2025">Genap 2024/2025</option>
-    <option value="Gasal_2025_2026">Gasal 2025/2026</option>
-  </select>
-  <div id="googleFormBox" class="mt-3 d-none">
-    <iframe id="googleFormFrame" width="100%" height="600" style="border:0;"></iframe>
-  </div>
 
 </div>
 
