--- a/main.html
+++ b/main.html
@@ -19,7 +19,10 @@
         <div class="d-flex align-items-center">
             <!-- Logo -->
             <div class="logo-box me-3">
-                <img src="DTMLOGO.png" alt="DTM FTUI Logo">
+                <img 
+                    src="DTMLOGO.png" 
+                    alt="DTM FTUI Logo"
+                    style="max-width:220px; height:auto; display:block;">
             </div>
 
             <!-- Title -->
@@ -33,6 +36,7 @@
         <button id="logoutBtn" class="btn btn-outline-danger">Logout</button>
     </div>
 </header>
+
 
 
 <!-- =================== MAIN CONTENT =================== -->
