--- a/main.html
+++ b/main.html
@@ -40,7 +40,7 @@
 
 
 <!-- =================== MAIN CONTENT =================== -->
-<div class="container" style="padding-top:120px;"> <!-- offset untuk sticky header -->
+<div class="container" style="padding-top:120px;"> <!-- offset for sticky header -->
 
     <div class="row">
         <!-- =================== Column 1 =================== -->
@@ -108,11 +108,45 @@
         <option value="Gasal_2025_2026">Gasal 2025/2026</option>
     </select>
 
-    <div id="googleFormBox" class="mt-3 d-none">
-        <iframe id="googleFormFrame" width="100%" height="600" style="border:0;"></iframe>
-    </div>
-
 </div>
+
+
+
+<!-- ==========================================
+     FULLSCREEN GOOGLE FORM MODAL
+=========================================== -->
+<div class="modal fade" id="googleFormModal" tabindex="-1">
+  <div class="modal-dialog modal-fullscreen">
+    <div class="modal-content">
+
+      <!-- Header -->
+      <div class="modal-header bg-dark text-white">
+        <h5 class="modal-title">Evaluasi Perkuliahan</h5>
+        <button type="button" class="btn btn-warning btn-sm px-3" data-bs-dismiss="modal">Close</button>
+      </div>
+
+      <!-- Loader -->
+      <div id="formLoader" class="loader-container">
+        <div class="loader"></div>
+        <p class="mt-3 text-center">Loading Form…</p>
+      </div>
+
+      <!-- Google Form Iframe -->
+      <div class="modal-body p-0">
+        <iframe 
+          id="googleFormFrame" 
+          width="100%" 
+          height="100%" 
+          style="border:0; display:none;"></iframe>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
