--- a/index.html
+++ b/index.html
@@ -1,27 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="overflow-x:hidden;">
 <head>
 <meta charset="UTF-8">
-<title>APPS CPL DTM FTUI (versi 1.0)</title>
+<title>Login - APPS CPL DTM FTUI</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="assets/css/style.css">
-<script src="assets/js/login.js" defer></script>
+<style>
+body{background:linear-gradient(135deg,#f6db00,#fff);height:100vh;font-family:Arial;
+display:flex;justify-content:center;align-items:center;}
+.login-card{width:380px;background:#fff;padding:28px;border-radius:16px;
+box-shadow:0 6px 20px rgba(0,0,0,0.15);}
+.btn-login{background:#f6db00;font-weight:600;}
+.btn-login:hover{background:#e5c700;}
+.error-msg{color:red;font-size:13px;display:none;}
+</style>
+
+<script>
+async function sha256(message){
+const msgBuffer=new TextEncoder().encode(message);
+const hashBuffer=await crypto.subtle.digest("SHA-256",msgBuffer);
+return Array.from(new Uint8Array(hashBuffer)).map(b=>b.toString(16).padStart(2,"0")).join("");
+}
+
+async function doLogin(){
+let u=document.getElementById("username").value.trim();
+let p=document.getElementById("password").value.trim();
+let err=document.getElementById("errMsg");
+if(!u||!p){err.style.display="block";err.textContent="Username dan password wajib diisi.";return;}
+
+let res=await fetch("data/users.json");
+let users=await res.json();
+let h=await sha256(p);
+
+let ok=users.find(x=>x.username===u&&x.password===h);
+if(!ok){
+ err.style.display="block";
+ err.textContent="Username atau password salah.";
+ return;
+}
+
+sessionStorage.setItem("loggedIn","true");
+sessionStorage.setItem("username",u);
+window.location="main.html";
+}
+
+document.addEventListener("keydown",e=>{if(e.key==="Enter")doLogin();});
+</script>
 </head>
-<body class="d-flex justify-content-center align-items-center vh-100">
-  <div class="card card-custom p-4" style="width:360px;">
-    <h4 class="text-center mb-3">APPS CPL DTM FTUI<br><small>Versi 1.0</small></h4>
-    <div id="errorMsg" class="alert alert-danger d-none"></div>
-    <form id="loginForm" onsubmit="return false;">
-      <div class="mb-3">
-        <label class="form-label">Username</label>
-        <input id="username" class="form-control" autocomplete="username">
-      </div>
-      <div class="mb-3">
-        <label class="form-label">Password</label>
-        <input id="password" type="password" class="form-control" autocomplete="current-password">
-      </div>
-      <button id="loginBtn" class="btn btn-dark w-100">Login</button>
-    </form>
-  </div>
+
+<body>
+<div class="login-card">
+<h4 class="text-center fw-bold">APPS CPL DTM FTUI</h4>
+<p class="text-center text-muted">Versi 1.0</p>
+
+<label>Username</label>
+<input id="username" class="form-control mb-2">
+
+<label>Password</label>
+<input id="password" type="password" class="form-control">
+
+<div id="errMsg" class="error-msg"></div>
+
+<button onclick="doLogin()" class="btn btn-login mt-3 w-100">Login</button>
+</div>
 </body>
 </html>
