--- a/main.html
+++ b/main.html
@@ -116,7 +116,7 @@
      FULLSCREEN GOOGLE FORM MODAL
 =========================================== -->
 <div class="modal fade" id="googleFormModal" tabindex="-1">
-  <div class="modal-dialog modal-fullscreen">
+  <div class="modal-dialog modal-fullscreen google-form-modal-fix">
     <div class="modal-content">
 
       <!-- Header -->
