--- a/old-lagi/main.html
+++ b/old-lagi/main.html
@@ -15,6 +15,7 @@
 <!-- =================== STICKY HEADER =================== -->
 <header class="app-header shadow-sm">
     <div class="container d-flex justify-content-between align-items-center py-2">
+
         <div class="d-flex align-items-center">
             <!-- Logo -->
             <div class="logo-box me-3">
@@ -36,11 +37,13 @@
     </div>
 </header>
 
+
+
 <!-- =================== MAIN CONTENT =================== -->
-<div class="container" style="padding-top:120px; padding-bottom:80px;"> <!-- offset for sticky header & footer -->
+<div class="container" style="padding-top:120px;"> <!-- offset for sticky header -->
 
     <div class="row">
-        <!-- Column 1 -->
+        <!-- =================== Column 1 =================== -->
         <div class="col-md-6">
             <h5 class="section-title">Pencapaian CPL per Mahasiswa</h5>
 
@@ -64,7 +67,7 @@
             </div>
         </div>
 
-        <!-- Column 2 -->
+        <!-- =================== Column 2 =================== -->
         <div class="col-md-6">
             <h5 class="section-title">Pencapaian CPL Prodi</h5>
 
@@ -94,7 +97,7 @@
 
     <hr class="my-4">
 
-    <!-- Google Form Section -->
+    <!-- =================== Google Form Section =================== -->
     <h5 class="section-title">Evaluasi Perkuliahan oleh Dosen Pengampu untuk Portofolio MK</h5>
 
     <label>Pilih Semester</label>
@@ -107,25 +110,24 @@
 
 </div>
 
+
+
 <!-- ==========================================
-     FULLSCREEN GOOGLE FORM MODAL (POSITIONED BETWEEN HEADER & FOOTER)
+     FULLSCREEN GOOGLE FORM MODAL
 =========================================== -->
 <div class="modal fade" id="googleFormModal" tabindex="-1">
-  <!-- note: class "google-form-modal-fix" is on modal-dialog -->
-  <div class="modal-dialog modal-fullscreen google-form-modal-fix" role="document">
+  <div class="modal-dialog modal-fullscreen google-form-modal-fix">
     <div class="modal-content">
 
-      <!-- Header inside modal -->
+      <!-- Header -->
       <div class="modal-header bg-dark text-white">
         <h5 class="modal-title">Evaluasi Perkuliahan</h5>
-
-        <!-- Custom Close (triggers JS closeFormModal) -->
-        <button type="button" id="modalCloseBtn" class="btn btn-warning btn-sm px-3">Close</button>
+        <button type="button" class="btn btn-warning btn-sm px-3" data-bs-dismiss="modal">Close</button>
       </div>
 
       <!-- Loader -->
-      <div id="formLoader" class="loader-container" aria-hidden="true">
-        <div class="loader" role="status" aria-label="Loading"></div>
+      <div id="formLoader" class="loader-container">
+        <div class="loader"></div>
         <p class="mt-3 text-center">Loading Form…</p>
       </div>
 
@@ -135,20 +137,13 @@
           id="googleFormFrame" 
           width="100%" 
           height="100%" 
-          style="border:0; display:none;" 
-          title="Google Form Evaluasi"></iframe>
+          style="border:0; display:none;"></iframe>
       </div>
 
     </div>
   </div>
 </div>
 
-<!-- ================= FOOTER (fixed) ================= -->
-<footer class="app-footer">
-  <div class="container text-center py-2">
-    <span>DTM FTUI &nbsp;@&nbsp; 2026</span>
-  </div>
-</footer>
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
