--- a/main.html
+++ b/main.html
@@ -122,18 +122,13 @@
       <!-- Floating Close Button -->
       <button type="button" class="close-float-btn" id="closeFloatBtn">✖</button>
 
-      <!-- Header -->
-      <div class="modal-header bg-dark text-white">
-        <h5 class="modal-title">Evaluasi Perkuliahan</h5>
-      </div>
-
       <!-- Loader -->
       <div id="formLoader" class="loader-container">
         <div class="loader"></div>
         <p class="mt-3 text-center">Loading Form…</p>
       </div>
 
-      <!-- Google Form Iframe -->
+      <!-- Google Form -->
       <div class="modal-body p-0">
         <iframe 
           id="googleFormFrame" 
