--- a/main.html
+++ b/main.html
@@ -37,6 +37,9 @@
     </div>
 </header>
 
+<!-- ========== FLOATING CLOSE BUTTON (GLOBAL) ========== -->
+<button id="closeFloatBtn" class="close-float-btn" style="display:none;">✖</button>
+
 
 
 <!-- =================== MAIN CONTENT =================== -->
@@ -118,9 +121,6 @@
 <div class="modal fade" id="googleFormModal" tabindex="-1">
   <div class="modal-dialog modal-fullscreen google-form-modal-fix">
     <div class="modal-content">
-
-      <!-- Floating Close Button -->
-      <button type="button" class="close-float-btn" id="closeFloatBtn">✖</button>
 
       <!-- Loader -->
       <div id="formLoader" class="loader-container">
