--- a/main.html
+++ b/main.html
@@ -17,36 +17,27 @@
     <div class="container d-flex justify-content-between align-items-center py-2">
 
         <div class="d-flex align-items-center">
-            <!-- Logo -->
             <div class="logo-box me-3">
-                <img 
-                    src="DTMLOGO.png" 
-                    alt="DTM FTUI Logo"
-                    style="max-width:220px; height:auto; display:block;">
+                <img src="DTMLOGO.png" alt="DTM FTUI Logo" style="max-width:220px; height:auto;">
             </div>
 
-            <!-- Title -->
             <div>
                 <div class="app-title">Aplikasi Monitoring dan Evaluasi Pencapaian CPL DTM FTUI</div>
                 <small id="userLabel" class="text-muted"></small>
             </div>
         </div>
 
-        <!-- Logout Button -->
         <button id="logoutBtn" class="btn btn-outline-danger">Logout</button>
     </div>
 </header>
 
-<!-- ========== FLOATING CLOSE BUTTON (GLOBAL) ========== -->
+<!-- FIXED CLOSE BUTTON (ALWAYS ABOVE EVERYTHING) -->
 <button id="closeFloatBtn" class="close-float-btn" style="display:none;">✖</button>
 
-
-
-<!-- =================== MAIN CONTENT =================== -->
-<div class="container" style="padding-top:120px; padding-bottom:80px;">
+<!-- MAIN CONTENT -->
+<div class="container" style="padding-top:130px; padding-bottom:90px;">
 
     <div class="row">
-        <!-- =================== Column 1 =================== -->
         <div class="col-md-6">
             <h5 class="section-title">Pencapaian CPL per Mahasiswa</h5>
 
@@ -66,11 +57,10 @@
             </select>
 
             <div class="mt-3">
-                <img id="imgMhs" src="" class="img-fluid d-none border" alt="grafik per mahasiswa">
+                <img id="imgMhs" src="" class="img-fluid d-none border">
             </div>
         </div>
 
-        <!-- =================== Column 2 =================== -->
         <div class="col-md-6">
             <h5 class="section-title">Pencapaian CPL Prodi</h5>
 
@@ -93,14 +83,13 @@
             </select>
 
             <div class="mt-3">
-                <img id="imgProdi" src="" class="img-fluid d-none border" alt="grafik prodi">
+                <img id="imgProdi" src="" class="img-fluid d-none border">
             </div>
         </div>
     </div>
 
     <hr class="my-4">
 
-    <!-- =================== Google Form Section =================== -->
     <h5 class="section-title">Evaluasi Perkuliahan oleh Dosen Pengampu untuk Portofolio MK</h5>
 
     <label>Pilih Semester</label>
@@ -113,44 +102,28 @@
 
 </div>
 
-
-
-<!-- ==========================================
-     FULLSCREEN GOOGLE FORM MODAL
-=========================================== -->
+<!-- GOOGLE FORM MODAL -->
 <div class="modal fade" id="googleFormModal" tabindex="-1">
-  <div class="modal-dialog modal-fullscreen google-form-modal-fix">
+  <div class="modal-dialog google-form-modal-fix">
     <div class="modal-content">
 
-      <!-- Loader -->
       <div id="formLoader" class="loader-container">
         <div class="loader"></div>
         <p class="mt-3 text-center">Loading Form…</p>
       </div>
 
-      <!-- Google Form -->
       <div class="modal-body p-0">
-        <iframe 
-          id="googleFormFrame" 
-          width="100%" 
-          height="100%" 
-          style="border:0; display:none;"></iframe>
+        <iframe id="googleFormFrame" style="border:0; width:100%; height:100%; display:none;"></iframe>
       </div>
 
     </div>
   </div>
 </div>
 
-
-<!-- ================= FOOTER ================= -->
 <footer class="app-footer">
-  <div class="container text-center py-2 text-white">
-    DTM FTUI @ 2026
-  </div>
+  <div class="container text-center py-2 text-white">DTM FTUI @ 2026</div>
 </footer>
 
-
-<!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
