--- a/main.html
+++ b/main.html
@@ -12,7 +12,6 @@
 
 <body>
 
-<!-- =================== STICKY HEADER =================== -->
 <header class="app-header shadow-sm">
     <div class="container d-flex justify-content-between align-items-center py-2">
 
@@ -20,7 +19,6 @@
             <div class="logo-box me-3">
                 <img src="DTMLOGO.png" alt="DTM FTUI Logo" style="max-width:220px; height:auto;">
             </div>
-
             <div>
                 <div class="app-title">Aplikasi Monitoring dan Evaluasi Pencapaian CPL DTM FTUI</div>
                 <small id="userLabel" class="text-muted"></small>
@@ -31,10 +29,8 @@
     </div>
 </header>
 
-<!-- FIXED CLOSE BUTTON (ALWAYS ABOVE EVERYTHING) -->
 <button id="closeFloatBtn" class="close-float-btn" style="display:none;">✖</button>
 
-<!-- MAIN CONTENT -->
 <div class="container" style="padding-top:130px; padding-bottom:90px;">
 
     <div class="row">
@@ -57,7 +53,7 @@
             </select>
 
             <div class="mt-3">
-                <img id="imgMhs" src="" class="img-fluid d-none border">
+                <img id="imgMhs" class="img-fluid d-none border" src="">
             </div>
         </div>
 
@@ -83,7 +79,7 @@
             </select>
 
             <div class="mt-3">
-                <img id="imgProdi" src="" class="img-fluid d-none border">
+                <img id="imgProdi" class="img-fluid d-none border" src="">
             </div>
         </div>
     </div>
@@ -102,11 +98,9 @@
 
 </div>
 
-<!-- GOOGLE FORM MODAL -->
 <div class="modal fade" id="googleFormModal" tabindex="-1">
   <div class="modal-dialog google-form-modal-fix">
     <div class="modal-content">
-
       <div id="formLoader" class="loader-container">
         <div class="loader"></div>
         <p class="mt-3 text-center">Loading Form…</p>
@@ -115,7 +109,6 @@
       <div class="modal-body p-0">
         <iframe id="googleFormFrame" style="border:0; width:100%; height:100%; display:none;"></iframe>
       </div>
-
     </div>
   </div>
 </div>
