--- a/main.html
+++ b/main.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 <meta charset="UTF-8">
 <title>Aplikasi Monitoring CPL</title>
@@ -12,109 +13,123 @@
 
 <body>
 
-<header class="app-header shadow-sm">
-    <div class="container d-flex justify-content-between align-items-center py-2">
+<!-- ================= HEADER ================= -->
+<header class="app-header glass-header shadow-sm">
+    <div class="container-fluid d-flex justify-content-between align-items-center py-2">
 
-        <div class="d-flex align-items-center">
+        <div class="d-flex align-items-center header-left">
             <div class="logo-box me-3">
-                <img src="DTMLOGO.png" alt="DTM FTUI Logo" style="max-width:220px; height:auto;">
+                <img src="DTMLOGO.png" alt="DTM FTUI Logo">
             </div>
             <div>
-                <div class="app-title">Aplikasi Monitoring dan Evaluasi Pencapaian CPL DTM FTUI</div>
+                <div class="app-title">Monitoring & Evaluasi CPL DTM FTUI</div>
                 <small id="userLabel" class="text-muted"></small>
             </div>
         </div>
 
-        <button id="logoutBtn" class="btn btn-outline-danger">Logout</button>
+        <button id="logoutBtn" class="btn btn-danger btn-sm rounded-pill px-3">Logout</button>
     </div>
 </header>
 
-<button id="closeFloatBtn" class="close-float-btn" style="display:none;">✖</button>
+<!-- CLOSE BUTTON (FLOATING) -->
+<button id="closeFloatBtn" class="close-float-btn">✖</button>
 
-<div class="container" style="padding-top:130px; padding-bottom:90px;">
+<!-- ================= CONTENT ================= -->
+<div class="container" style="padding-top:140px; padding-bottom:100px;">
 
-    <div class="row">
+    <!-- Row 1 -->
+    <div class="row g-4">
+
+        <!-- CARD 1 -->
         <div class="col-md-6">
-            <h5 class="section-title">Pencapaian CPL per Mahasiswa</h5>
+            <div class="modern-card">
+                <h5 class="section-title">Pencapaian CPL per Mahasiswa</h5>
 
-            <label>Program Studi</label>
-            <select id="prodiMhs" class="form-select mb-2">
-                <option value="">-- pilih Program Studi --</option>
-                <option value="S1_Teknik_Perkapalan">S1 Teknik Perkapalan</option>
-                <option value="S1_Teknik_Mesin">S1 Teknik Mesin</option>
-            </select>
+                <label class="form-label mt-2">Program Studi</label>
+                <select id="prodiMhs" class="form-select mb-2">
+                    <option value="">Pilih Program Studi</option>
+                    <option value="S1_Teknik_Perkapalan">S1 Teknik Perkapalan</option>
+                    <option value="S1_Teknik_Mesin">S1 Teknik Mesin</option>
+                </select>
 
-            <label>Semester</label>
-            <select id="semesterMhs" class="form-select mb-2">
-                <option value="">-- pilih Semester --</option>
-                <option value="Gasal_2024_2025">Gasal 2024/2025</option>
-                <option value="Genap_2024_2025">Genap 2024/2025</option>
-                <option value="Gasal_2025_2026">Gasal 2025/2026</option>
-            </select>
+                <label class="form-label">Semester</label>
+                <select id="semesterMhs" class="form-select mb-2">
+                    <option value="">Pilih Semester</option>
+                    <option value="Gasal_2024_2025">Gasal 2024/2025</option>
+                    <option value="Genap_2024_2025">Genap 2024/2025</option>
+                    <option value="Gasal_2025_2026">Gasal 2025/2026</option>
+                </select>
 
-            <div class="mt-3">
-                <img id="imgMhs" class="img-fluid d-none border" src="">
+                <div class="image-box mt-3">
+                    <img id="imgMhs" class="img-fluid d-none modern-image">
+                </div>
             </div>
         </div>
 
+        <!-- CARD 2 -->
         <div class="col-md-6">
-            <h5 class="section-title">Pencapaian CPL Prodi</h5>
+            <div class="modern-card">
+                <h5 class="section-title">Pencapaian CPL Prodi</h5>
 
-            <label>Program Studi</label>
-            <select id="prodiProdi" class="form-select mb-2">
-                <option value="">-- pilih Program Studi --</option>
-                <option value="S1_Teknik_Perkapalan">S1 Teknik Perkapalan</option>
-                <option value="S1_Teknik_Mesin">S1 Teknik Mesin</option>
-            </select>
+                <label class="form-label mt-2">Program Studi</label>
+                <select id="prodiProdi" class="form-select mb-2">
+                    <option value="">Pilih Program Studi</option>
+                    <option value="S1_Teknik_Perkapalan">S1 Teknik Perkapalan</option>
+                    <option value="S1_Teknik_Mesin">S1 Teknik Mesin</option>
+                </select>
 
-            <label>Angkatan Masuk</label>
-            <select id="angkatanProdi" class="form-select mb-2">
-                <option value="">-- pilih Angkatan --</option>
-                <option value="2020">2020</option>
-                <option value="2021">2021</option>
-                <option value="2022">2022</option>
-                <option value="2023">2023</option>
-                <option value="2024">2024</option>
-                <option value="2025">2025</option>
-            </select>
+                <label class="form-label">Angkatan Masuk</label>
+                <select id="angkatanProdi" class="form-select mb-2">
+                    <option value="">Pilih Angkatan</option>
+                    <option value="2020">2020</option>
+                    <option value="2021">2021</option>
+                    <option value="2022">2022</option>
+                    <option value="2023">2023</option>
+                    <option value="2024">2024</option>
+                    <option value="2025">2025</option>
+                </select>
 
-            <div class="mt-3">
-                <img id="imgProdi" class="img-fluid d-none border" src="">
+                <div class="image-box mt-3">
+                    <img id="imgProdi" class="img-fluid d-none modern-image">
+                </div>
             </div>
         </div>
     </div>
 
-    <hr class="my-4">
+    <!-- Row 2 -->
+    <div class="modern-card mt-4">
+        <h5 class="section-title">Evaluasi Perkuliahan Oleh Dosen Pengampu</h5>
 
-    <h5 class="section-title">Evaluasi Perkuliahan oleh Dosen Pengampu untuk Portofolio MK</h5>
-
-    <label>Pilih Semester</label>
-    <select id="evalSemester" class="form-select w-50 mb-2">
-        <option value="">-- pilih Semester --</option>
-        <option value="Gasal_2024_2025">Gasal 2024/2025</option>
-        <option value="Genap_2024_2025">Genap 2024/2025</option>
-        <option value="Gasal_2025_2026">Gasal 2025/2026</option>
-    </select>
+        <label class="form-label">Pilih Semester</label>
+        <select id="evalSemester" class="form-select w-50">
+            <option value="">Pilih Semester</option>
+            <option value="Gasal_2024_2025">Gasal 2024/2025</option>
+            <option value="Genap_2024_2025">Genap 2024/2025</option>
+            <option value="Gasal_2025_2026">Gasal 2025/2026</option>
+        </select>
+    </div>
 
 </div>
 
+<!-- ============ MODAL GOOGLE FORM ============ -->
 <div class="modal fade" id="googleFormModal" tabindex="-1">
   <div class="modal-dialog google-form-modal-fix">
     <div class="modal-content">
+
       <div id="formLoader" class="loader-container">
         <div class="loader"></div>
-        <p class="mt-3 text-center">Loading Form…</p>
+        <p class="loading-text">Loading Form…</p>
       </div>
 
-      <div class="modal-body p-0">
-        <iframe id="googleFormFrame" style="border:0; width:100%; height:100%; display:none;"></iframe>
-      </div>
+      <iframe id="googleFormFrame"></iframe>
+
     </div>
   </div>
 </div>
 
+<!-- FOOTER -->
 <footer class="app-footer">
-  <div class="container text-center py-2 text-white">DTM FTUI @ 2026</div>
+  <div class="text-center py-2 text-white">DTM FTUI © 2026</div>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
