--- a/main.html
+++ b/main.html
@@ -32,7 +32,7 @@
 </header>
 
 <!-- CLOSE BUTTON (FLOATING) -->
-<button id="closeFloatBtn" class="close-float-btn">✖</button>
+<button id="closeFloatBtn" class="close-float-btn" style="display:none;">✖</button>
 
 <!-- ================= CONTENT ================= -->
 <div class="container" style="padding-top:140px; padding-bottom:100px;">
