--- a/main.html
+++ b/main.html
@@ -21,6 +21,7 @@
             <div class="logo-box me-3">
                 <img src="DTMLOGO.png" alt="DTM FTUI Logo">
             </div>
+
             <div>
                 <div class="app-title">Monitoring & Evaluasi CPL DTM FTUI</div>
                 <small id="userLabel" class="text-muted"></small>
@@ -31,11 +32,11 @@
     </div>
 </header>
 
-<!-- CLOSE BUTTON (FLOATING) -->
+<!-- CLOSE BUTTON -->
 <button id="closeFloatBtn" class="close-float-btn" style="display:none;">✖</button>
 
 <!-- ================= CONTENT ================= -->
-<div class="container" style="padding-top:140px; padding-bottom:100px;">
+<div class="container" style="padding-top: calc(var(--header-height) + 20px); padding-bottom: 100px;">
 
     <!-- Row 1 -->
     <div class="row g-4">
@@ -111,7 +112,7 @@
 
 </div>
 
-<!-- ============ MODAL GOOGLE FORM ============ -->
+<!-- ===== MODAL GOOGLE FORM ===== -->
 <div class="modal fade" id="googleFormModal" tabindex="-1">
   <div class="modal-dialog google-form-modal-fix">
     <div class="modal-content">
