--- a/main.html
+++ b/main.html
@@ -112,12 +112,13 @@
 
 </div>
 
-<!-- ===== GOOGLE FORM PANEL (NO BOOTSTRAP MODAL) ===== -->
+<!-- ===== GOOGLE FORM PANEL (NOT MODAL) ===== -->
 <div id="googleFormPanel">
     <div id="formLoader">
         <div class="loader"></div>
         <p class="loading-text">Loading Form…</p>
     </div>
+
     <iframe id="googleFormFrame"></iframe>
 </div>
 
